--- a/pom.xml
+++ b/pom.xml
@@ -114,5 +114,21 @@
 	    <artifactId>pagehelper</artifactId>
 	    <version>5.1.8</version>
 	</dependency>
-   </dependencies>
+	<dependency>
+		<groupId>com.fasterxml.jackson.annotations</groupId>
+		<artifactId>jackson-annotations</artifactId>
+		<version>2.7.4</version>
+		<type>pom.lastUpdated</type>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-core</artifactId>
+		<version>2.7.4</version>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.7.4</version>
+	</dependency>
+	</dependencies>
 </project>
